--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.279.0",
     "mogoose": "^0.0.1-security",
     "next": "13.4.19",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "svix": "^1.12.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
