npm install mongodb and mongoose, remove incorrect 'mogoose' package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
-    "mogoose": "^0.0.1-security",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
     "next": "13.4.19",
     "postcss": "8.4.30",
     "react": "18.2.0",
