--- a/package.json
+++ b/package.json
@@ -38,5 +38,12 @@
     "typescript": "5.2.2",
     "uploadthing": "^5.6.1",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
