--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "lucide-react": "^0.279.0",
     "mongodb": "^6.1.0",
