--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lucide-react": "^0.279.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
-    "next": "13.4.19",
+    "next": "v13.5.4-canary.6",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
