--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@testing-library/user-event": "^14.5.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "mongodb-memory-server": "^9.0.1",
     "ts-jest": "^29.1.1"
   }
 }
